@startuml TileTextureGenerator - Hexagonal Architecture

!define CORE_COLOR #E1F5FE
!define ADAPTER_COLOR #FFF9C4
!define INFRA_COLOR #F0F4C3
!define UI_COLOR #E8EAF6

title TileTextureGenerator - Hexagonal Architecture (Ports & Adapters)

package "Presentation Layer" UI_COLOR {
    package "TileTextureGenerator (MAUI App)" {
        [App.xaml]
        [AppShell.xaml]
        [MauiProgram.cs]
        [DependencyInjection\nExtensions.cs]
    }
    
    package "TileTextureGenerator.Presentation.UI" {
        [ManageProjectListPage]
        [EditProjectPage]
        [ManageProjectListViewModel]
        [EditProjectViewModel]
        [Converters]
        [ProjectTypeLocalizer]
    }
}

package "Adapters Layer" ADAPTER_COLOR {
    package "TileTextureGenerator.Adapters.UseCases" {
        [ManageProjectListUseCase]
        [EditProjectUseCase]
    }
    
    package "TileTextureGenerator.Adapters.Persistence" {
        [JsonProjectsStore]
        [JSonProjectStore]
        [JSonTransformationStore]
        [ImagePersistenceHelper]
        [JsonPathHelper]
        [PathHelper]
    }
}

package "Core (Domain + Application)" CORE_COLOR {
    package "Entities" {
        [ProjectBase] <<abstract>>
        [TransformationBase] <<abstract>>
        [FloorTileProject]
        [WallTileProject]
        [HorizontalFloorTransformation]
        [VerticalWallTransformation]
    }
    
    package "Services" {
        [ProjectsManager]
    }
    
    package "Registries" {
        [TextureProjectRegistry]
        [TransformationTypeRegistry]
    }
    
    package "Ports (Input)" {
        interface "IProjectsManager" as IProjectsManagerPort
    }
    
    package "Ports (Output)" {
        interface "IProjectsStore" as IProjectsStorePort
        interface "IProjectStore" as IProjectStorePort
        interface "ITransformationStore" as ITransformationStorePort
    }
    
    package "DTOs" {
        [ProjectDto]
        [TransformationDTO]
        [TransformationTypeDTO]
        [ProjectListItemDto]
    }
}

package "Infrastructure Layer" INFRA_COLOR {
    package "TileTextureGenerator.Infrastructure.FileSystem" {
        [IFileSystemService]
        [FileSystemService]
    }
}

' UI -> Adapters.UseCases
[ManageProjectListViewModel] --> [ManageProjectListUseCase] : uses
[EditProjectViewModel] --> [EditProjectUseCase] : uses

' Adapters.UseCases -> Core Ports (Input)
[ManageProjectListUseCase] --> IProjectsManagerPort : uses
[EditProjectUseCase] --> [ProjectBase] : wraps

' Core Services implement Ports (Input)
[ProjectsManager] ..|> IProjectsManagerPort : implements

' Core Services -> Ports (Output)
[ProjectsManager] --> IProjectsStorePort : uses
[ProjectBase] --> IProjectStorePort : uses
[TransformationBase] --> ITransformationStorePort : uses

' Adapters.Persistence implement Ports (Output)
[JsonProjectsStore] ..|> IProjectsStorePort : implements
[JSonProjectStore] ..|> IProjectStorePort : implements
[JSonTransformationStore] ..|> ITransformationStorePort : implements

' Adapters.Persistence -> Infrastructure
[JsonProjectsStore] --> [IFileSystemService] : uses
[JSonProjectStore] --> [ImagePersistenceHelper] : uses
[JSonTransformationStore] --> [ImagePersistenceHelper] : uses

' Infrastructure implementation
[FileSystemService] ..|> [IFileSystemService] : implements

' Entities hierarchy
[ProjectBase] <|-- [FloorTileProject]
[ProjectBase] <|-- [WallTileProject]
[TransformationBase] <|-- [HorizontalFloorTransformation]
[TransformationBase] <|-- [VerticalWallTransformation]

' Registries
[TextureProjectRegistry] --> [ProjectBase] : creates
[TransformationTypeRegistry] --> [TransformationBase] : creates
[TransformationTypeRegistry] --> [ITransformationMetadata] : uses reflection

note right of IProjectsManagerPort
  **Input Port** (Driving)
  Used by UI adapters
  to interact with Core
end note

note right of IProjectsStorePort
  **Output Port** (Driven)
  Implemented by Persistence
  adapters to store data
end note

note bottom of "Core (Domain + Application)"
  **Domain logic**
  No dependencies on external frameworks
  Pure business rules
end note

legend right
  |= Color |= Layer |
  | <back:CORE_COLOR>   </back> | Core (Domain + Application) |
  | <back:ADAPTER_COLOR>   </back> | Adapters (UseCases + Persistence) |
  | <back:INFRA_COLOR>   </back> | Infrastructure |
  | <back:UI_COLOR>   </back> | Presentation (UI) |
endlegend

@enduml
